@@ -17,10 +17,12 @@ import org.springframework.scheduling.annotation.Scheduled;
 import org.springframework.stereotype.Service;
 
 import javax.transaction.Transactional;
+import java.sql.SQLException;
 import java.time.LocalDateTime;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Optional;
+import java.util.stream.Collectors;
 
 @Service
 @Log4j2
@@ -31,16 +33,12 @@ public class SeatServiceImpl implements SeatService{
 
     @Override
     public List<List<SeatStateDTO>> getAllSeat(String timetableId, int row, int col) {
-        List<String> reservedSeatList = getReservedSeatList(timetableId);
         List<List<SeatStateDTO>> seats = new ArrayList<>();
         for(char alpha = 'A'; alpha < 'A' + row; alpha++){
             seats.add(new ArrayList<>());
             for(int num = 1; num <= col; num++) {
-                StringBuilder seatCodeBuilder = new StringBuilder();
-                seatCodeBuilder.append(alpha);
-                seatCodeBuilder.append(String.format("%02d", num));
-                String seatCode = seatCodeBuilder.toString();
-                boolean exist = reservedSeatList.contains(seatCode);
+                String seatCode = new StringBuilder().append(alpha).append(String.format("%02d", num)).toString();
+                boolean exist = getReservedSeatList(timetableId).contains(seatCode);
                 seats.get(alpha - 'A').add(new SeatStateDTO().builder().seatCode(seatCode).available(!exist).build());
             }
         }
@@ -48,110 +46,70 @@ public class SeatServiceImpl implements SeatService{
     }
 
     @Override
-    public String register(SeatDTO dto) {
-        log.debug("DTO: {}", dto);
-
-        Seat entity = dtoToEntity(dto);
-
-        log.debug("Entity: {}", entity);
-
-        seatRepository.save(entity);
-
-        return entity.getSeatCode();
-    }
-
-    @Override
     @Transactional
     public void confirmSeat(String timetableId, String memberId, String reservationId, String seats) {
-        String[] seatCodes = seats.split(",");
-        for (String seatCode : seatCodes) {
+        for (String seatCode : seats.split(",")) {
             seatRepository.updateReservationId(reservationId, timetableId, seatCode, memberId);
         }
-
     }
 
     @Override
     public List<String> getReservedSeatList(String timetableId) {
-        BooleanBuilder booleanBuilder = getReservedSeat(timetableId);
-        Pageable pageable = PageRequest.of(0, 1000);
-        List<Seat> seatList = seatRepository.findAll(booleanBuilder, pageable).toList();
-        List<String> seatIdList = new ArrayList<>();
-        seatList.forEach(el -> {
-            log.debug("seat: {}", el);
-            seatIdList.add(el.getSeatCode());
-        });
-        return seatIdList;
+        return seatRepository.findAll(getReservedSeat(timetableId), PageRequest.of(0, 1000))
+                .stream().map(e -> e.getSeatCode()).collect(Collectors.toList());
     }
 
     @Override
     public List<String> getMySeatList(String reservationId) {
-        BooleanBuilder booleanBuilder = getMySeat(reservationId);
-        Pageable pageable = PageRequest.of(0, 1000);
-        List<Seat> seatList = seatRepository.findAll(booleanBuilder, pageable).toList();
-        List<String> seatIdList = new ArrayList<>();
-        seatList.forEach(el -> seatIdList.add(el.getSeatCode()));
-        return seatIdList;
-    }
-
-    private BooleanBuilder getReservedSeat(String timetableId) {
-        BooleanBuilder booleanBuilder = new BooleanBuilder();
-        QSeat qSeat = QSeat.seat;
-        BooleanExpression expression = qSeat.timetableId.eq(timetableId);
-        booleanBuilder.and(expression);
-        return booleanBuilder;
-    }
-
-    private BooleanBuilder getMySeat(String reservationId) {
-        BooleanBuilder booleanBuilder = new BooleanBuilder();
-        QSeat qSeat = QSeat.seat;
-        BooleanExpression expression = qSeat.reservationId.eq(reservationId);
-        booleanBuilder.and(expression);
-        return booleanBuilder;
+        return seatRepository.findAll(getMySeat(reservationId), PageRequest.of(0, 1000))
+                .stream().map(e -> e.getSeatCode()).collect(Collectors.toList());
     }
 
     @Override
-    @Transactional(rollbackOn = {DataIntegrityViolationException.class})
-    public Boolean preempt(SeatDTO dto) {
-        SeatId seatId = SeatId.builder().timetableId(dto.getTimetableId()).seatCode(dto.getSeatCode()).build();
-        Optional<Seat> result = seatRepository.findById(seatId);
-        if(result.isPresent() && !(result.get().getMemberId().equals(dto.getMemberId()))){
-            return false;
-        }
-        seatRepository.save(dtoToEntity(dto));
-        return true;
+    @Transactional(rollbackOn = {DataIntegrityViolationException.class, SQLException.class})
+    public void preemptSeat(SeatDTO dto) {
+        Seat seat = dtoToEntity(dto);
+        seatRepository.save(seat);
     }
 
     @Override
-    public Boolean remove(SeatDTO dto) {
-        SeatId seatId = SeatId.builder().timetableId(dto.getTimetableId()).seatCode(dto.getSeatCode()).build();
-        Optional<Seat> result = seatRepository.findById(seatId);
-        if(result.isPresent() && result.get().getMemberId().equals(dto.getMemberId())) {
+    public Boolean cancelSeat(SeatDTO dto) {
+        Seat seat = dtoToEntity(dto);
+        Optional<Seat> result = seatRepository.findById(
+                SeatId.builder().timetableId(dto.getTimetableId()).seatCode(dto.getSeatCode()).build());
+        if(result.isPresent() && isSameMember(seat, result.get())) {
             List<Seat> deleteList = new ArrayList<>();
-            deleteList.add(dtoToEntity(dto));
+            deleteList.add(seat);
             seatRepository.deleteInBatch(deleteList);
             return true;
         }
-        else{
-            return false;
-        }
+        return false;
     }
 
     @Scheduled(fixedDelay = 300000)
     public void cancelPreemption(){
-        BooleanBuilder booleanBuilder = getExpiredSeat();
-        Pageable pageable = PageRequest.of(0, 1000);
-        List<Seat> list = seatRepository.findAll(booleanBuilder, pageable).toList();
+        List<Seat> list = seatRepository.findAll(getExpiredSeat(), PageRequest.of(0, 1000)).toList();
         list.forEach(e -> log.info("{} 사용자의 좌석 선점 만료. 상영번호: {}, 좌석번호: {}", e.getMemberId(), e.getTimetableId(), e.getSeatCode()));
         seatRepository.deleteInBatch(list);
     }
 
+    private BooleanBuilder getReservedSeat(String timetableId) {
+        return new BooleanBuilder()
+                .and(QSeat.seat.timetableId.eq(timetableId));
+    }
+
+    private BooleanBuilder getMySeat(String reservationId) {
+        return new BooleanBuilder()
+                .and(QSeat.seat.reservationId.eq(reservationId));
+    }
+
     private BooleanBuilder getExpiredSeat() {
-        BooleanBuilder booleanBuilder = new BooleanBuilder();
-        QSeat qSeat = QSeat.seat;
-        BooleanExpression expression1 = qSeat.regDate.lt(LocalDateTime.now().minusMinutes(5));
-        BooleanExpression expression2 = qSeat.reservationId.isNull();
-        booleanBuilder.and(expression1);
-        booleanBuilder.and(expression2);
-        return booleanBuilder;
+        return new BooleanBuilder()
+                .and(QSeat.seat.regDate.lt(LocalDateTime.now().minusMinutes(5)))
+                .and(QSeat.seat.reservationId.isNull());
+    }
+
+    private boolean isSameMember(Seat seat1, Seat seat2) {
+        return seat2.getMemberId().equals(seat1.getMemberId());
     }
 }
